2006-09-22  Jim Weirich  <jim@weirichhouse.org>

	* test/io_capture.rb (Gem::IoCapture): Created new IoCapture
	module to handle capturing output of code under test.

	* test/test_installer.rb
	(TestInstaller::test_generate_bin_symlinks_win32): Removed ugly
	$TESTING hack and substituted new io capture module.
	(TestInstaller::test_install_with_message): Removed one-off stdout
	capture and replaced with new IO Capture module.

2006-09-19  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/rubygems_version.rb (Gem): Bumped to version
	0.9.0.3.

	* test/test_version_comparison.rb (TestRequirementEquality): Added
	more tests for Dependency equality testing and one additions check
	for requirement vs non-requirement equality.

	* lib/rubygems/version.rb (Gem::Dependency::==) Fixed '=' bug in
	'==' code.

2006-09-18 Chad Fowler <chad@chadfowler.com>
      
        * lib/rubygems/remote_installer.rb
        Only show the last 3 gem versions on a multiplatform remote
        install list.

2006-09-18  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/remote_installer.rb
	(Gem::RemoteInstaller::install): Added Hugh Sasse's patch for
	skipping gems on install.

	* lib/rubygems/rubygems_version.rb (Gem): Bumped to 0.9.0.2.

	* lib/rubygems/version.rb (Gem::Dependency::hash): Added hash code
	calculation.
	(Gem::Version::hash): Added hash code calculation.
	(Gem::Requirement::hash): Added hash code calculation.

	* test/test_specification.rb (TestSpecificationEquality): Added
	tests for specification equality and hashing.

	* test/test_remote_installer.rb
	(TestRemoteInstaller::test_installer_has_proxy_uri): Added tests
	for proper proxy initialization in RemoteFetcher.

	* test/test_version_comparison.rb (TestVersionEquality): Added
	tests for version equality and hashing.
	(TestRequirementEquality): Added tests for requirement equality.

	* lib/rubygems/specification.rb (Gem::Specification::hash): Added
	a hash method and improved equality testing.
